--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "author": "Elton Rodrigues",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
