--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Um gateway para pagamento através de recursos http.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
