--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: "3.1"
+version: "3.7"
 
 services:
   db:
     image: mysql:5.7
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=mysql_native_password --init-file /data/application/init.sql
     ports:
       - "3306:3306"
+    volumes:
+      - ./init.sql:/data/application/init.sql
     restart: always
     env_file:
       - .env
@@ -15,8 +17,6 @@ services:
   app:
     build: .
     depends_on:
-      - db
-    links:
       - db
     command: npm run start
     ports:
